--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 certifi==2018.11.29
 chardet==3.0.4
 cycler==0.10.0
+dj-database-url==0.5.0
 Django==2.1.5
-django-colorful==1.3
+django-heroku==0.3.1
+gunicorn==19.9.0
 icon-font-to-png==0.4.1
 idna==2.8
 kiwisolver==1.0.1
@@ -10,6 +12,7 @@ matplotlib==3.0.2
 numpy==1.16.0
 palettable==3.1.1
 Pillow==5.4.1
+psycopg2==2.7.7
 pyparsing==2.3.1
 python-dateutil==2.7.5
 pytz==2018.9
@@ -17,4 +20,5 @@ requests==2.21.0
 six==1.12.0
 tinycss==0.4
 urllib3==1.24.1
+whitenoise==4.1.2
 wordcloud==1.5.0
