--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,25 @@
-certifi==2018.11.29
+certifi==2019.9.11
 chardet==3.0.4
 cycler==0.10.0
 dj-database-url==0.5.0
-Django==2.1.7
+Django==2.2.6
 django-heroku==0.3.1
 gunicorn==19.9.0
 icon-font-to-png==0.4.1
 idna==2.8
-kiwisolver==1.0.1
-matplotlib==3.0.2
-numpy==1.16.0
-palettable==3.1.1
-Pillow==5.4.1
+kiwisolver==1.1.0
+matplotlib==3.1.1
+numpy==1.17.2
+palettable==3.3.0
+Pillow==6.2.0
 psycopg2==2.7.7
-pyparsing==2.3.1
-python-dateutil==2.7.5
-pytz==2018.9
-requests==2.21.0
+pyparsing==2.4.2
+python-dateutil==2.8.0
+pytz==2019.2
+requests==2.22.0
 six==1.12.0
+sqlparse==0.3.0
 tinycss==0.4
-urllib3==1.24.1
-whitenoise==4.1.2
+urllib3==1.25.6
+whitenoise==4.1.4
 wordcloud==1.5.0
